feat: impeliment product controller and service
